--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ function startKeyPressListener(){
 body {
 background-color: black; 
 }
+html {
+overflow: hidden; 
+	}
 #instructions {
 color: white; 
 font-family: Arial, sans-serif;
